--- a/index.html
+++ b/index.html
@@ -23,6 +23,40 @@
 
         </div>
     </section>
+    <!-- End of landing section-->
     
+    <!-- Start of  service-->
+    <section id="services">
+        <div class="services container">
+            <div class="service-top">
+                <h1 class="section-title">Serv<span>i</span>ces</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
+            </div>
+            <div class="services-bottom">
+                <div class="service-item">
+                    <div class="icon">
+                        <img src="https://img.icons8.com/bubbles/50/000000/services.png"/>
+                    </div>
+                    <h2>Web Development</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
+                </div>
+                <div class="service-item">
+                    <div class="icon">
+                        <img src="https://img.icons8.com/bubbles/50/000000/paint-palette.png"/>
+                    </div>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
+                </div>
+                <div class="service-item">
+                    <div class="icon">
+                        <img src="https://img.icons8.com/bubbles/50/000000/manufacturing.png"/>
+                    </div>
+                    <h2>Automating</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--End of service-->
 </body>
 </html>
