--- a/index.html
+++ b/index.html
@@ -4,59 +4,79 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Erik Lindahl</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Glass Website</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    <nav class="navbar"></nav>
-    <!-- Landing section-->
-    <section id="home">
-        <div class="home container">
-            <div>
-                <h1>Hello, <span></span></h1>
-                <h1>My Name is<span></span></h1>
-                <h1>Erik<span></span></h1>
-                <a href="#about" type="button" class="cta">Learn more</a>
-            </div>
-
-        </div>
-    </section>
-    <!-- End of landing section-->
-    
-    <!-- Start of  service-->
-    <section id="services">
-        <div class="services container">
-            <div class="service-top">
-                <h1 class="section-title">Serv<span>i</span>ces</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
-            </div>
-            <div class="services-bottom">
-                <div class="service-item">
-                    <div class="icon">
-                        <img src="https://img.icons8.com/bubbles/50/000000/services.png"/>
-                    </div>
-                    <h2>Web Development</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
+    <main>
+        <section class="glass">
+            <div class="dashboard">
+                <div class="user">
+                    <img src="./images/avatar.png">
+                    <h3>Erik Bob</h3>
+                    <p>Pro Member</p>
                 </div>
-                <div class="service-item">
-                    <div class="icon">
-                        <img src="https://img.icons8.com/bubbles/50/000000/paint-palette.png"/>
+                <div class="links">
+                    <div class="link">
+                        <img src="./images/twitch.png" alt="">
+                        <h2>Streams</h2>                   
                     </div>
-                    <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
+                    <div class="link">
+                        <img src="./images/steam.png" alt="">
+                        <h2>Games</h2>                   
+                    </div>
+                    <div class="link">
+                        <img src="./images/upcoming.png" alt="">
+                        <h2>New</h2>                   
+                    </div>
+                    <div class="link">
+                        <img src="./images/library.png" alt="">
+                        <h2>Library</h2>                   
+                    </div>
                 </div>
-                <div class="service-item">
-                    <div class="icon">
-                        <img src="https://img.icons8.com/bubbles/50/000000/manufacturing.png"/>
-                    </div>
-                    <h2>Automating</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
+                <div class="pro">
+                    <h2>Join pro for free games.</h2>
+                    <img src="./images/controller.png">
                 </div>
             </div>
-        </div>
-    </section>
-    <!--End of service-->
+            <div class="games">
+                <div class="status">
+                    <h1>Aktive Games</h1>
+                    <input type="text" />
+                </div>
+                <div class="cards">
+                    <img src="./images/assassins.png" alt="">
+                    <div class="card-info">
+                        <h2>Assassins Creed Valhalla</h2>
+                        <p>PS5 Version</p>
+                        <div class="progress"></div>
+                    </div>
+                    <h2 class="percentage">60%</h2>
+                </div>
+                <div class="cards">
+                    <img src="./images/assassins.png" alt="">
+                    <div class="card-info">
+                        <h2>Assassins Creed Valhalla</h2>
+                        <p>PS5 Version</p>
+                        <div class="progress"></div>
+                    </div>
+                    <h2 class="percentage">60%</h2>
+                </div>
+                <div class="cards">
+                    <img src="./images/assassins.png" alt="">
+                    <div class="card-info">
+                        <h2>Assassins Creed Valhalla</h2>
+                        <p>PS5 Version</p>
+                        <div class="progress"></div>
+                    </div>
+                    <h2 class="percentage">60%</h2>
+                </div>
+            </div>
+        </section>
+    </main>
+    <div class="circle1"></div>
+    <div class="circle2"></div>
 </body>
 </html>
