--- a/index.html
+++ b/index.html
@@ -58,5 +58,16 @@
         </div>
     </section>
     <!--End of service-->
+    <!--Start projects -->
+    <section class="projects">
+        <div class="proejcts container">
+            <div class="projects-header">
+                <h1 class="section-title">Recent Projects</h1>
+                
+            </div>
+        </div>
+    </section>
+    <!--End of projects-->
+
 </body>
 </html>
