--- a/index.html
+++ b/index.html
@@ -59,11 +59,52 @@
     </section>
     <!--End of service-->
     <!--Start projects -->
-    <section class="projects">
-        <div class="proejcts container">
+    <section id="projects">
+        <div class="projects container">
             <div class="projects-header">
-                <h1 class="section-title">Recent Projects</h1>
-                
+                <h1 class="section-title">Recent <span>Projects</span></h1>
+            </div>
+            <div class="all-projects">
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>Project 1</h1>
+                        <h2>Coding is Coding</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="images/img-1.png">
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>Project 2</h1>
+                        <h2>Coding is Coding</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="images/img-1.png">
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>Project 3</h1>
+                        <h2>Coding is Coding</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="images/img-1.png">
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>Project 4</h1>
+                        <h2>Coding is Coding</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="images/img-1.png">
+                    </div>
+                </div>
             </div>
         </div>
     </section>
