--- a/index.html
+++ b/index.html
@@ -109,6 +109,52 @@
         </div>
     </section>
     <!--End of projects-->
+    
+    <!-- Start of about section-->
+    <section id="about">
+        <div class="about container">
+            <div class="col-top">
+                <div class="section-title">
+                    <h1>About <span>Me</span></h1>
+                </div>
+            </div>
+            <div class="col-bottom">
+                <h3>Erik</h3>
+                <h3>Lindahl</h3>
+                <p>I am a boy born 1999 in a small town in Sweden called <span>Sala</span>.</p>
+                <p>From a very young age i´ve been intrested in <span>technology</span>, <span>physics</span> and <span>computer science</span>.</p>
+                <p>As of right now i am working as a <span>excavator operator</span> in a small company in my home town.</p>
+                <p>I am a <span>fast learner</span> and i am not afraid of taking <span>responsibility</span> and evolving as a human.</p>
+            </div>
+        </div>
+    </section>
 
+    <!-- End of About section -->
+    <!-- Start of contact section-->
+    <section id="contact">
+        <div class="contact container">
+            <div><h1 class="section-title">Contact <span>Info</span></h1></div>
+            <div class="contact-items">
+                <div class="contact-item">
+                    <img src="https://img.icons8.com/bubbles/100/000000/apple-mail.png"/>
+                    <div class="contact-info">
+                        <h1>Email</h1>
+                        <a href="mailto:erik.lindahl99@gmail.com"><h2>Erik.lindahl99@gmail.com</h2></a>
+                    </div>
+                </div>
+                <div class="contact-item">
+                    <img src="https://img.icons8.com/bubbles/100/000000/world-map.png"/>
+                    <div class="contact-info">
+                        <h1>Living</h1>
+                        <a href="https://goo.gl/maps/eB9oYdk8PZWWJNS99"><h2>Sala, Västmanland, Sweden</h2></a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
+
+    <!--End of contact section-->
 </body>
 </html>
