--- a/index.html
+++ b/index.html
@@ -10,7 +10,27 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar"></nav>
+      <!-- Header -->
+  <section id="header">
+    <div class="header container">
+      <div class="nav-bar">
+        <div class="brand">
+          <a href="#hero"><h1><span>E</span>rik <span>L</span>indahl</h1></a>
+        </div>
+        <div class="nav-list">
+          <div class="hamburger"><div class="bar"></div></div>
+          <ul>
+            <li><a href="#home" data-after="Home">Home</a></li>
+            <li><a href="#services" data-after="Service">Services</a></li>
+            <li><a href="#projects" data-after="Projects">Projects</a></li>
+            <li><a href="#about" data-after="About">About</a></li>
+            <li><a href="#contact" data-after="Contact">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Header -->
     <!-- Landing section-->
     <section id="home">
         <div class="home container">
@@ -156,5 +176,27 @@
 
 
     <!--End of contact section-->
+     <!-- Footer -->
+  <section id="footer">
+    <div class="footer container">
+      <div class="brand"><h1><span>E</span>rik <span>L</span>indahl</h1></div>
+      <h2>Your front end developer</h2>
+      <div class="social-icon">
+        <div class="social-item">
+          <a href="https://www.facebook.com/ehlindahl"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png"/></a>
+        </div>
+        <div class="social-item">
+          <a href="https://www.instagram.com/eriiklindahl/"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png"/></a>
+        </div>
+        <div class="social-item">
+          <a href="https://www.twitter.com/ehlindahl"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png"/></a>
+        </div>
+        
+      </div>
+      <p>Copyright © 2021 Erik. All rights reserved</p>
+    </div>
+  </section>
+  <!-- End Footer -->
+    <script src="./app.js"></script>
 </body>
 </html>
