--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="services container">
             <div class="service-top">
                 <h1 class="section-title">Serv<span>i</span>ces</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
+                <p>I can provide you a wide range of services but this is my most stand-out characteristics. I do have a customer in focus think and always ensure that the requirements gets met!</p>
             </div>
             <div class="services-bottom">
                 <div class="service-item">
@@ -58,21 +58,22 @@
                         <img src="https://img.icons8.com/bubbles/100/000000/services.png"/>
                     </div>
                     <h2>Web Development</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
+                    <p>With knowledge of all major technologies from todays webdevelopment i can provide a very robust and elegant solution for your web needs. Using the most up-to-date framework to maximize performance and make sure it get´s as effecient as possible.</p>
                 </div>
                 <div class="service-item">
                     <div class="icon">
                         <img src="https://img.icons8.com/bubbles/100/000000/paint-palette.png"/>
                     </div>
                     <h2>Web Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
+                    <p>Designing a website today and starting from scratch is not easy. There is many aspects to think of to even get the attention on todays market! Let me take care of that for you.</p>
                 </div>
                 <div class="service-item">
                     <div class="icon">
                         <img src="https://img.icons8.com/bubbles/100/000000/manufacturing.png"/>
                     </div>
                     <h2>Automating</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias voluptatum explicabo!</p>
+                    <p>I´ve got an intresting background around the automation process. My earier experiences includes automated shopping bots on hyped sites including supremenewyork, footlocker, shopify and a wide range of similiar sites. Other than that i have an inovative thinking that always tries to optimize and simplify the everyday tasks.</p>
+                    </p>
                 </div>
             </div>
         </div>
