--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="project-info">
                         <h1>Project 1</h1>
                         <h2>NetOnNet shopper</h2>
-                        <p>One of my most recent projects is an automated softwares that targets popular site were items with higher demand than supply is available. NetOnNet were one of the sites, it´s a swedish electronics store that sold the PS5´s online. With my Automated shopper i successfully managed to get my hands on a few consoles, with no need of sitting in front of the site all day!</p>
+                        <p>One of my most recent projects is an automated softwares that targets popular site were items with higher demand than supply is available. NetOnNet is one of the sites. It´s a swedish electronics store that sold the PS5´s online. With my Automated shopper i successfully managed to get my hands on a few consoles, with no need of sitting in front of the site all day!</p>
                     </div>
                     <div class="project-img">
                         <img src="https://png.pngtree.com/element_our/20190602/ourlarge/pngtree-hand-drawn-blue-shopping-cart-illustration-image_1400763.jpg">
