--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-      <!-- Header -->
+  <!-- Header -->
   <section id="header">
     <div class="header container">
       <div class="nav-bar">
         <div class="brand">
-          <a href="#hero"><h1><span>E</span>rik <span>L</span>indahl</h1></a>
+          <a href="#Home"><h1><span>E</span>rik <span>L</span>indahl</h1></a>
         </div>
         <div class="nav-list">
           <div class="hamburger"><div class="bar"></div></div>
