--- a/Store/store.html
+++ b/Store/store.html
@@ -89,7 +89,7 @@
                 'username': 'vacker_sala',
                 'container': "#instagram-feed-demo",
                 'display_profile': true,
-                'display_biography': true,
+                'display_biography': false,
                 'display_gallery': true,
                 'display_captions': true,
                 'callback': null,
