--- a/Store/store.html
+++ b/Store/store.html
@@ -27,7 +27,7 @@
             <li><a href="#hem" data-after="Hem">Hem</a></li>
             <li><a href="https://vackerhosam.valei.com/" target="_blank" data-after="Boka">Boka behandling</a></li>
             <li><a href="#omoss" data-after="Om oss">Om oss</a></li>
-            <li><a href="#kontakt" data-after="Kontakt">Kontakta oss</a></li>
+            <li><a href="#HittaHit" data-after="Kontakt">Kontakta oss</a></li>
           </ul>
         </div>
       </div>
